tests/hm_typing/faulty_enum_missing_variant.sy
A :: enum
    Q,
    W,
    // E,
end


start :: fn do
    case A.Q do
        Q -> end
        W -> end
        E -> end
    end
end

// error: Enum 'A' doesn't have variant 'E'
